--- a/style.css
+++ b/style.css
@@ -1,48 +1,120 @@
-#banner {
-	width:100%;
+header {
+    background-color: #bbb;
+    padding: 20px 0;
 }
 
-.principal{
-	background: #CCCCCC;
-	padding: 30px;
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0;
 }
 
-.titulo-principal {
-	padding-left: 20px;
+.caixa {
+    /* Pai da navegação - relative para filho ficar absoluto em relação a ele */
+    position: relative; 
+    width: 940px;
+    margin: 0 auto;
 }
 
-.titulo-centralizado {
-	text-align: center
+nav li {
+    display: inline;
+    margin-left: 15px;
 }
 
-p {
-	text-align: center;
+nav a {
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
 }
 
-#missao {
-	font-size: 20px
+nav a:hover {
+    color: #c78c19;
 }
 
-em strong {
-	color: #FF0000;
+.produtos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
 }
 
-.itens {
-	font-style: italic
+.produtos li {
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    /* background-color: #ccc; */
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+
+    border: 2px solid #000000;
+    border-radius: 10px;
 }
 
-.beneficios {
-	background: #FFFFFF;
-	padding: 20px;
+.produtos li:hover{
+    border-color: #c78c19;
 }
 
-ul {
-	display: inline-block;
-	vertical-align: top;
-	width: 20%;
-	margin-right: 15%;
+.produtos li:active{
+    border-color: #08cc19;
+    
 }
 
-.imagembeneficios {
-	width: 50%;
+.produtos li:hover h2 {
+    font-size: 34px;
+}
+
+.produtos h2 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.produto-descricao{
+    font-size: 18px;
+}
+
+.produto-preco{
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+footer {
+    text-align: center;
+    background-color: #343a40;
+    padding: 40px 0 !important;
+}
+
+.copyright {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin-top: 20px;
+}
+
+/* Formulários */
+main {
+    width: 940px;
+    margin: 0 auto !important;
+}
+
+form {
+    margin: 40px 0 !important;
+}
+
+
+form :is(label, input) {
+    display: block;
+}
+
+form label {
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+
+form input {
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
 }
