--- a/style.css
+++ b/style.css
@@ -104,17 +104,21 @@ form {
 }
 
 
-form :is(label, input) {
+form :is(label, p, textarea) {
     display: block;
 }
 
-form label {
+form label, form p {
     font-size: 20px;
     margin: 0 0 10px;
 }
 
-form input {
+.input-padrao{
     margin: 0 0 20px;
     padding: 10px 25px;
     width: 50%;
+}
+
+.checkbox {
+    margin: 20px 0;
 }
