--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
 header {
     background-color: #bbb;
     padding: 20px 0;
@@ -108,7 +113,7 @@ form :is(label, p, textarea) {
     display: block;
 }
 
-form label, form p {
+form label, form legend {
     font-size: 20px;
     margin: 0 0 10px;
 }
@@ -121,4 +126,93 @@ form label, form p {
 
 .checkbox {
     margin: 20px 0;
+}
+
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    color: white;
+    background-color: orange;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: .2s all;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background-color: darkorange;
+    transform: scale(1.1);
+    /* transform: rotate(20deg); */
+}
+
+table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px solid #000000 !important;
+    padding: 8px 15px !important;
+}
+
+.banner {
+    width: 100%;
+}
+
+.titulo-principal {
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+}
+
+.principal {
+    margin: 0 0 1em;
+}
+
+.principal strong {
+    font-weight: bold;
+}
+
+.principal em {
+    font-style: italic;
+}
+
+.imagembeneficios{
+    width: 60%;
+}
+
+.utensilios {
+    width: 120px;
+}
+
+.caixa {
+    display: flex;
+}
+
+.caixa img {
+    margin: 0 20px 20px 0;
+}
+
+.container {
+    margin-left: 10px;
+}
+
+.container p:nth-child(2) {
+    margin: 12px 0 12px 0;
+}
+
+.mapa{
+    padding: 3em 0;
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
 }
