--- a/style.css
+++ b/style.css
@@ -100,8 +100,7 @@ footer {
 
 /* Formulários */
 main {
-    width: 940px;
-    margin: 0 auto !important;
+
 }
 
 form {
@@ -173,6 +172,13 @@ td, th {
 }
 
 .principal {
+    padding: 3em 0;
+    background: #fefefe;
+    width: 940px;
+    margin: 0 auto !important;
+}
+
+.principal p {
     margin: 0 0 1em;
 }
 
@@ -184,7 +190,47 @@ td, th {
     font-style: italic;
 }
 
-.imagembeneficios{
+.mapa-conteudo{
+    width: 940px;
+    margin: 0 auto !important;
+}
+
+.mapa{
+    padding: 3em 0;
+    background: linear-gradient(#fefefe, #888888)
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.beneficios {
+    padding: 3em 0;
+    background: #888888;
+    
+
+}
+.conteudo-beneficios{
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens{
+    line-height: 1.5;
+}
+
+.itens:first-child {
+    font-weight: bold;
+}
+
+.imagem-beneficios{
     width: 60%;
 }
 
@@ -208,11 +254,9 @@ td, th {
     margin: 12px 0 12px 0;
 }
 
-.mapa{
-    padding: 3em 0;
-}
 
-.mapa p {
-    margin: 0 0 2em;
-    text-align: center;
+
+.video{
+    width: 560px;
+    margin: 2em auto;
 }
